@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2006/08/31
+	* Fixed @summon's delete timer being screwed up. [Skotlex]
+	* Cleaned up a bit the summon script command. [Skotlex]
+	* Fixed the clone script command's delete-timer being screwed up. [Skotlex]
 2006/08/30
 	* Skill required-state will now only be checked on cast-begin, not
 	  cast-end. [Skotlex]
